# arbitrum-revm

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE
.github/workflows/: ci.yml
crates/arb-reth-derive/: Cargo.toml
crates/arb-reth-derive/src/: batch.rs  blob.rs  delayed.rs  l2message.rs  lib.rs  message.rs  multiplexer.rs
crates/arb-reth-derive/tests/: blob_batch_fixture.rs  calldata_batch_fixture.rs  delayed_accumulator_fixture.rs
crates/arb-reth-derive/tests/fixtures/: arb1_calldata_batch_497980_meta.json  arb1_cleanbatch_1277861_meta.json  arb1_delayed_messages.json
crates/arb-reth-evm/: Cargo.toml
crates/arb-reth-evm/src/: block.rs  config.rs  lib.rs  tests.rs  tx.rs
crates/arb-reth-evm/src/block/: tests.rs
crates/arb-reth-evm/src/config/: tests.rs
crates/arb-revm/: Cargo.toml
crates/arb-revm-test-vectors/: Cargo.toml
crates/arb-revm-test-vectors/src/: lib.rs  runner.rs  strict_db.rs  witness.rs
crates/arb-revm-test-vectors/tests/: fixture_suite.rs  transaction_vectors.rs
crates/arb-revm/src/: arb_journal.rs  arbos_init.rs  chain.rs  constants.rs  deposit_tx.rs  evm.rs  executor.rs  handler.rs  internal_tx.rs  l1_cost.rs  lib.rs  main.rs  precompiles.rs  replay.rs  retry_tx.rs  spec.rs  state_trie.rs  submit_retryable_tx.rs  transaction.rs  transaction_filter.rs  util.rs
crates/arb-revm/src/api/: builder.rs  default_ctx.rs  exec.rs
crates/arb-revm/src/executor/: contract.rs  digest.rs  mod.rs  run.rs  runner.rs
crates/arb-revm/src/precompiles/: arb_address_table.rs  arb_aggregator.rs  arb_bls.rs  arb_debug.rs  arb_filtered_transactions_manager.rs  arb_function_table.rs  arb_gas_info.rs  arb_info.rs  arb_native_token_manager.rs  arb_owner.rs  arb_owner_public.rs  arb_retryable_tx.rs  arb_statistics.rs  arb_sys.rs  arb_wasm.rs  arb_wasm_cache.rs  common.rs  mod.rs
crates/arb-revm/src/storage/: address_set.rs  address_table.rs  arbos_state.rs  batch_poster_table.rs  block_hashes.rs  bytes.rs  chain_config.rs  features.rs  l1_pricing.rs  l2_pricing.rs  mod.rs  offsets.rs  programs.rs  queue.rs  retryables.rs  send_merkle.rs  slot.rs
crates/arb-revm/src/stylus/: api.rs  constants.rs  dispatch.rs  executor.rs  gas.rs  mod.rs  params.rs  program.rs
crates/arb-revm/tests/: digest_fixtures.rs  number_opcode.rs  parity_fixtures.rs  replay_fixtures.rs
crates/arb-revm/tests/fixtures/: arb1_arbos10_london_70M.json  arb1_arbos11_shanghai_180M.json  arb1_arbos20_cancun_200M.json  arb1_arbos40_prague_350M.json  arb1_arbos40to51_transition_419260688.json  arb1_arbos51_autoredeem_477180356.json  arb1_arbos51_prague_476M.json  deposit_mint.json  testnode_deposit_177.json  testnode_retryable_476.json
crates/arb-revm/tests/fixtures/stylus/: arb1_arbos51_stylus_activation_485279792.json  arb1_arbos51_stylus_sstore_refund_484139815.json
crates/arb-stf-capture/: Cargo.toml
crates/arb-stf-capture/src/: capture.rs  main.rs  normalize.rs  rpc.rs
crates/arb-stf-fixture/: Cargo.toml
crates/arb-stf-fixture/src/: lib.rs  objects.rs  schema.rs
docs/: README.md  arb-reth-progress.md  arb-reth-roadmap.md  arbos-version-gating-parity.md  manual-redeem-gas-parity.md  nitro-sequencer-feed-to-block-trace.md  retryable-flow-nitro.md
docs/fixtures/: submit_retryable-capture-2026-04-07.md  submit_retryable_execution_diff.json  submit_retryable_message_only.json  submit_retryable_raw_feed_payload.json
scripts/: replay_block_range.py  run_live_parity_harness.py  run_mismatch_loop.py  run_parity_matrix.py  verify_with_nitro.py  witness_corpus.sh
testdata/fixtures/: deposit_message_only.json
testdata/stf/v2/: README.md  manifest.json
testdata/stf/v2/cases/opcodes/blobbasefee-halt/: case.json
testdata/stf/v2/cases/opcodes/eip3541-invalid-ef/: case.json
