[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["nun"]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
eyre = "0.6.12"
hex = "0.4.3"
revm = { version = "36.0.0", features = ["optional_priority_fee_check", "optional_balance_check"] }
revm-database = { version = "12.0.0", features = ["alloydb"] }
alloy-provider = { version = "1.4.2", default-features = false, features = ["reqwest-rustls-tls"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
alloy-rlp = "0.3.12"
