[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["nun"]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
eyre = "0.6.12"
hex = "0.4.3"
revm = { version = "41.0.0", features = ["optional_priority_fee_check", "optional_balance_check", "optional_eip7623"] }
revm-database = { version = "41.0.0", features = ["alloydb"] }
alloy-provider = { version = "2.0", default-features = false, features = ["reqwest-rustls-tls"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
alloy-rlp = "0.3.12"
