[package]
name = "arb-reth-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Phase 1: bridge arb_revm's Arbitrum/ArbOS execution into reth's EVM + BlockExecutor
# extension points. Pinned to reth v2.0.0, which carries revm 36.0.0 — an exact match
# for arb_revm (no revm patching). See docs/arb-reth-roadmap.md.

[dependencies]
arb-revm = { path = "../arb-revm" }
revm = { workspace = true }

# Arbitrum primitives come from the user's idiomatic arb-alloy (op-alloy-parity): ArbTxEnvelope,
# ArbReceiptEnvelope (gas_used_for_l1), ArbHeaderInfo, the Arbitrum Network impl. Consumed as a
# path dep; alloy unifies upward (arb-alloy ^1.6.3 -> reth's 1.8.3). reth-trait impls will be
# added INSIDE arb-alloy behind a `reth` feature (orphan rule).
arb-alloy-consensus = { path = "../../../arb-alloy/crates/consensus", default-features = false, features = ["reth"] }

# reth v2.0.0 -> revm 36 (verified). Git-pinned to the release tag for cross-crate coherence.
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }

# Stage B: wrap arb_revm's ArbOS EVM as reth's EvmFactory + Evm. alloy-evm 0.30.0 pins revm 36.0.0
# (exact match for arb_revm), so this adds no new revm in the graph. reth-primitives-traits 0.1.1
# carries the NodePrimitives/SignedTransaction surface arb-alloy's `reth` feature satisfies.
alloy-evm = { version = "0.30", default-features = false }
reth-primitives-traits = { version = "0.1.1", default-features = false }

# alloy consensus traits (Transaction / SignerRecoverable / Encodable2718) used to lower an
# ArbTxEnvelope into the revm tx env. Pulled in via arb-alloy's already-unified alloy 1.8.3.
alloy-consensus = { version = "1", default-features = false }
alloy-eips = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }
