[package]
name = "arb-revm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Extracted Arbitrum storage and layout primitives for revm extensions"

[dependencies]
eyre.workspace = true
hex.workspace = true
revm.workspace = true
revm-database.workspace = true
# reth node seam: `EvmInternals` (the state handle DynPrecompiles receive). 0.30 pins the exact
# same revm 36 as the workspace, so this adds no new revm to the graph. Hosts the orphan-rule
# `impl ArbJournal for EvmInternals` that lets ArbOS precompiles run on the node path.
alloy-evm = { version = "0.37", default-features = false }
alloy-provider = { workspace = true, features = ["reqwest", "debug-api"] }
serde_json.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio.workspace = true
tracing.workspace = true
alloy-rlp.workspace = true
alloy-trie = "0.9.5"
alloy-consensus = "2.0"
alloy-eips = "2.0"
alloy-core = "1.4.3"
alloy-rpc-client = "2.0"
alloy-transport = "2.0"
alloy-rpc-types-eth = "2.0"
alloy-rpc-types-trace = "2.0"
alloy-network-primitives = "2.0"
url = "2.5"
arb_alloy_consensus = { package = "arb-alloy-consensus", git = "https://github.com/nuntax/arb-alloy", rev = "dbbb6061447a41498e117e16ae38e2bbb7ec0ac7", features = ["k256"] }
arb_sequencer_network = { package = "arb-sequencer-network", git = "https://github.com/nuntax/arb-alloy", rev = "dbbb6061447a41498e117e16ae38e2bbb7ec0ac7" }
arb_alloy_precompiles = { package = "arb-alloy-precompiles", git = "https://github.com/nuntax/arb-alloy", rev = "dbbb6061447a41498e117e16ae38e2bbb7ec0ac7" }
arb_alloy_rpc_types = { package = "arb-alloy-rpc-types", git = "https://github.com/nuntax/arb-alloy", rev = "dbbb6061447a41498e117e16ae38e2bbb7ec0ac7" }
arb_alloy_network = { package = "arb-alloy-network", git = "https://github.com/nuntax/arb-alloy", rev = "dbbb6061447a41498e117e16ae38e2bbb7ec0ac7" }
brotli = { path = "../../vendor/brotli/crates/brotli", features = ["cc_brotli"] }

# Stylus WASM execution is deferred for the standalone build: it needs Nitro's forked
# wasmer (crates/stylus, arbutil, wasmer-types), which is not packaged standalone and would
# pull a second copy of `brotli` that collides with the vendored one. The `src/stylus`
# module stays in-tree but is compiled only under the `stylus` feature, which currently has
# no backing dependencies (enabling it will not build until they are restored).

[features]
stylus = []
