[package]
name = "arb-revm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Extracted Arbitrum storage and layout primitives for revm extensions"

[dependencies]
eyre.workspace = true
hex.workspace = true
revm.workspace = true
revm-database.workspace = true
# reth node seam: `EvmInternals` (the state handle DynPrecompiles receive). 0.30 pins the exact
# same revm 36 as the workspace, so this adds no new revm to the graph. Hosts the orphan-rule
# `impl ArbJournal for EvmInternals` that lets ArbOS precompiles run on the node path.
alloy-evm = { version = "0.37", default-features = false }
alloy-provider = { workspace = true, features = ["reqwest", "debug-api"] }
serde_json.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio.workspace = true
tracing.workspace = true
metrics = "0.24"
alloy-rlp.workspace = true
alloy-trie = "0.9.5"
alloy-consensus = "2.0"
alloy-eips = "2.0"
alloy-core = "1.4.3"
alloy-rpc-client = "2.0"
alloy-transport = "2.0"
alloy-rpc-types-eth = "2.0"
alloy-rpc-types-trace = "2.0"
alloy-network-primitives = "2.0"
url = "2.5"
arbitrum-alloy-consensus = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21", features = ["k256"] }
arbitrum-alloy-sequencer = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21" }
arbitrum-alloy-precompiles = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21" }
arbitrum-alloy-rpc-types = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21" }
arbitrum-alloy-network = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21" }
# Brotli + the Stylus runtime (Nitro's forked wasmer + prover) are VENDORED under vendor/nitro so
# the crate is self-contained: it builds from a fresh checkout with no sibling ../nitro and travels
# with the repo through a git dependency (arb-reth fetches it from GitHub). brotli is Nitro's copy so
# it unifies with the one the `stylus` crate pulls (a single cc_brotli C build links; no collision).
brotli = { path = "../../vendor/nitro/crates/brotli", features = ["cc_brotli"] }

# Stylus WASM execution (heavy build: pulls the vendored wasmer fork). Feature-gated: a non-stylus
# build skips all of it. Exact Nitro runtime = parity by construction.
stylus = { path = "../../vendor/nitro/crates/stylus", features = ["cc_brotli"], optional = true }
arbutil = { path = "../../vendor/nitro/crates/arbutil", optional = true }
wasmer-types = { path = "../../vendor/nitro/crates/tools/wasmer/lib/types", optional = true }
wasm-encoder = { version = "0.244.0", optional = true }
wasmparser = { version = "0.244.0", optional = true }
wasmprinter = { version = "0.244.0", optional = true }
lru = { version = "0.16.3", optional = true }
lazy_static = { version = "1.5.0", optional = true }

[features]
stylus = ["dep:stylus", "dep:arbutil", "dep:wasmer-types", "dep:wasm-encoder", "dep:wasmparser", "dep:wasmprinter", "dep:lru", "dep:lazy_static"]
